--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -1,3 +1,36 @@
+.dark-background {
+  background-color: white; }
+
+.single-form .input-label::before {
+  color: #f7ac54; }
+
+body {
+  color: #4562ae !important; }
+
+h1 {
+  color: #4562ae !important; }
+
+h2 {
+  color: #4562ae !important; }
+
+h3, .formations-titre {
+  color: #4562ae !important; }
+
+h4 {
+  color: #f7ac54 !important; }
+
+h6 {
+  color: #f7ac54 !important; }
+
+p {
+  color: #777; }
+
+.p-r-10 {
+  padding-right: 20px; }
+
+.p-l-10 {
+  padding-left: 20px; }
+
 /*
 HERO
 */
@@ -8,9 +41,34 @@ HERO
 .head--h1-test > span {
   font-size: 5.5rem; }
 
+.overlay-color::before {
+  background-color: transparent; }
+
+.home-section .heading-outer::after,
+.home-section .heading-outer::before {
+  background-color: #f7ac54; }
+
 /*
 NAVIGATION
 */
+.nav a {
+  color: #4562ae; }
+
+.nav .btn-nav {
+  color: #4562ae !important; }
+
+.navbar {
+  z-index: 2; }
+
+.navbar-nav {
+  z-index: 1; }
+
+.navbar, .navbar-nav {
+  background-color: white !important; }
+
+.nav-trigger .icon, .nav-trigger .icon::after, .nav-trigger .icon::before {
+  background-color: #4562ae; }
+
 .nav--lien-padding {
   padding: 1px; }
 
@@ -31,10 +89,10 @@ NAVIGATION
 SECTIONS
 */
 .section--color-dark {
-  background-color: #282828 !important; }
+  background-color: white !important; }
 
 .section--color-light {
-  background-color: #1a1a1a !important; }
+  background-color: white !important; }
 
 .sections--titre-taille {
   font-size: 2rem; }
@@ -55,6 +113,14 @@ SECTION HOME
 /*
 SECTION FORMATION
 */
+#services-section .btn {
+  color: #4562ae;
+  font-style: italic; }
+
+.services-section .each-services .each-services-inner .title {
+  line-height: 1.3;
+  margin-bottom: 1.5rem; }
+
 .formation--mecha-title {
   line-height: 1.3; }
 
@@ -64,9 +130,22 @@ SECTION FORMATION
 .formation--image-curseur {
   cursor: all-scroll !important; }
 
+.services-content-outer .overflow p {
+  color: #777; }
+
+.services-content-outer .overflow a {
+  color: #4562ae; }
+
+.services-full-view .services-details .back-button-outer .btn, .services-full-view .services-details .back-button-outer .btn .icon {
+  color: #f7ac54; }
+
 /*
 SECTION CONSEILS
 */
+.profile-outer {
+  font-size: 1.6rem !important;
+  line-height: 1; }
+
 .conseil-titre-centrer-1 {
   margin-bottom: 3rem; }
 
@@ -82,7 +161,8 @@ SECTION CONSEILS
 
 .conseil--liste-decoration {
   list-style: none;
-  line-height: 2.2; }
+  line-height: 2.2;
+  color: #777; }
 
 .conseil--img-taille {
   width: 60% !important;
@@ -96,13 +176,13 @@ SECTION CONSEILS
   transition: height 700ms ease-in-out; }
 
 .testimonial-section .testimonial-wrapper .owl-wrapper-outer .owl-wrapper {
-  background-color: #282828 !important; }
+  background-color: white !important; }
 
 .testimonial-section .testimonial-wrapper .owl-item {
-  background-color: #282828 !important; }
+  background-color: white !important; }
 
 .testimonial-section .testimonial-wrapper .item .profile-outer {
-  background-color: #282828 !important; }
+  background-color: white !important; }
 
 /*
 SECTION DOCUMENTS
