--- a/app/css/custom.scss
+++ b/app/css/custom.scss
@@ -1,3 +1,53 @@
+$green: #0a8141;
+$blue: #4562ae;
+$or: #f7ac54;
+$gris: #777;
+
+$colorLight: white;
+$colorDark: white;
+
+// formulaire contact
+.dark-background{
+    background-color: white;
+}
+.single-form .input-label::before{
+    color: $or;
+}
+
+body{
+    color: $blue !important;
+}
+
+h1{
+    color: $blue !important;
+}
+h2{
+    color: $blue !important;
+}
+h3, .formations-titre{
+    color: $blue !important;
+}
+h4{
+    color: $or !important;
+}
+h6{
+    color: $or !important;
+}
+
+p {
+    color: $gris;
+}
+
+.p-r-10 {
+    padding-right: 20px;
+}
+
+.p-l-10 {
+    padding-left: 20px;
+}
+
+
+
 /*
 HERO
 */
@@ -10,13 +60,43 @@ HERO
     font-size: 5.5rem;
 }
 
-$colorLight : #282828;
+.overlay-color::before{
+    background-color: transparent;
+}
 
-$colorDark : rgb(26, 26, 26) ;
+.home-section .heading-outer::after,
+.home-section .heading-outer::before {
+    background-color: $or;
+}
 
 /*
 NAVIGATION
 */
+.nav {
+    a {
+        color: $blue;
+    }
+    .btn-nav{
+        color: $blue !important;
+    }
+}
+
+.navbar{
+    z-index: 2;
+}
+
+.navbar-nav {
+    z-index: 1;
+}
+
+.navbar, .navbar-nav {
+    background-color: white !important;
+}
+
+.nav-trigger .icon, .nav-trigger .icon::after, .nav-trigger .icon::before {
+    background-color: $blue;
+}
+
 .nav--lien-padding{
     padding: 1px;
 }
@@ -66,7 +146,14 @@ SECTION HOME
 /*
 SECTION FORMATION
 */
-
+#services-section .btn {
+    color: $blue;
+    font-style: italic;
+}
+.services-section .each-services .each-services-inner .title{
+    line-height: 1.3;
+    margin-bottom: 1.5rem;
+}
 .formation--mecha-title{
     line-height: 1.3;
 }
@@ -77,11 +164,29 @@ SECTION FORMATION
 .formation--image-curseur{
     cursor: all-scroll !important;
 }
+.services-content-outer .overflow {
+    p{
+        color: $gris;
+    }
+    a{
+        color: $blue;
+    }
+}
+
+// icon back
+.services-full-view .services-details .back-button-outer .btn, .services-full-view .services-details .back-button-outer .btn .icon{
+    color: $or;;
+}
 
 
 /*
 SECTION CONSEILS
 */
+.profile-outer {
+    font-size: 1.6rem !important;
+    line-height: 1;
+}
+
 .conseil-titre-centrer-1{
     margin-bottom: 3rem;
 }
@@ -102,6 +207,7 @@ SECTION CONSEILS
 .conseil--liste-decoration{
     list-style: none;
     line-height: 2.2;
+    color: $gris;
 }
 
 .conseil--img-taille{
