--- a/app/css/custom.scss
+++ b/app/css/custom.scss
@@ -6,13 +6,6 @@ $gris: #777;
 $colorLight: white;
 $colorDark: white;
 
-// formulaire contact
-.dark-background{
-    background-color: white;
-}
-.single-form .input-label::before{
-    color: $or;
-}
 
 body{
     color: $blue !important;
@@ -51,6 +44,10 @@ p {
 /*
 HERO
 */
+.main-preloader{
+    background-color: white;
+}
+
 .head--h1-test{
     font-size: 4rem;
     line-height: 1.3;
@@ -274,10 +271,47 @@ SECTION MISSION-EX
     margin: 5rem 0 2rem 0;
 }
 
+/*
+SECTION PORTFOLIO
+*/
+#portfolio-section{
+    .btn {
+        color: $blue;
+    }
+}
+
+
+/*
+SECTION MISSION EXPLOSIVE
+*/
+#services-section{
+    li{
+        color: $gris;
+    }
+}
+
+
+/*
+SECTION MISSION EXPLOSIVE
+*/
+#team-section{
+    .lora-team{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+}
+
 
 /*
 SECTION CONTACT
 */
+.dark-background{
+    background-color: white;
+}
+.single-form .input-label::before{
+    color: $or;
+}
 // champs inputs
 .input-outer .group.relative{
     border-bottom: 1px dashed $gris;
@@ -286,8 +320,21 @@ SECTION CONTACT
 .input-outer.input-filled .group.relative{
     border-bottom: transparent;
 }
-.input-outer.input-filled .group.relative input {
-    color: black;
+
+#contact-form {
+    input, textarea {
+        color: black;
+    }
+    textarea {
+        line-height: 1.6;
+        padding-top: 15px;
+    }
+    .btn {
+        color: $blue;
+    }
+    .icon {
+        color: $blue;
+    }
 }
 
 /*
