--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -114,7 +114,17 @@ SECTION FORMATION
   color: #4562ae;
   font-style: italic; }
 
-.services-section .each-services .each-services-inner .title {
+#services-section .each-services-outer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+
+#services-section .each-services-inner .title {
   line-height: 1.3;
   margin-bottom: 1.5rem; }
 
@@ -222,7 +232,7 @@ SECTION MISSION EXPLOSIVE
   color: #777; }
 
 /*
-SECTION MISSION EXPLOSIVE
+SECTION TEAM
 */
 #team-section .lora-team {
   display: -webkit-box;
@@ -233,6 +243,15 @@ SECTION MISSION EXPLOSIVE
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center; }
+
+#team-section .profile-image {
+  margin-bottom: 10px; }
+
+#team-section .profile-content .position {
+  color: #777; }
+
+#team-section .profile-content span {
+  width: 145px; }
 
 /*
 SECTION CONTACT
@@ -267,8 +286,26 @@ SECTION CONTACT
 /*
 SECTION FOOTER
 */
+.contact-footer .each-section .overflow p {
+  color: #4562ae; }
+
+.contact-footer .row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly; }
+
 .footer--img-padding {
-  padding: 1rem 0 0 0 !important; }
+  padding: 1rem 0 0 0 !important;
+  margin-right: 20px;
+  width: 100px; }
+
+.contact-footer .social-icon li a {
+  background-color: #0a8141; }
+  .contact-footer .social-icon li a i {
+    color: white; }
 
 /*
 - au hover sur slider mission, figer le slider
