--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -1,24 +1,51 @@
+html {
+  font-size: 62.5%; }
+
+body {
+  font-size: 1.6rem; }
+
 body {
   background-color: #fff;
   color: #4562ae !important; }
 
 h1 {
-  color: #4562ae !important; }
+  color: #4562ae !important;
+  -webkit-font-smoothing: antialiased; }
 
 h2 {
-  color: #4562ae !important; }
+  color: #4562ae !important;
+  font-size: 4.2rem !important;
+  -webkit-font-smoothing: antialiased; }
 
 h3, .formations-titre {
-  color: #4562ae !important; }
+  color: #4562ae !important;
+  -webkit-font-smoothing: antialiased; }
 
 h4 {
-  color: #f7ac54 !important; }
+  color: #f7ac54 !important;
+  font-size: 2.4rem !important;
+  -webkit-font-smoothing: antialiased; }
 
 h6 {
-  color: #f7ac54 !important; }
+  color: #f7ac54 !important;
+  font-size: 2.2rem !important;
+  -webkit-font-smoothing: antialiased; }
 
-p {
-  color: #777; }
+p, li {
+  color: #4e4e4e;
+  font-size: 1.6rem !important;
+  -webkit-font-smoothing: antialiased; }
+
+p.sub-heading {
+  font-size: 2rem !important;
+  -webkit-font-smoothing: antialiased; }
+
+a {
+  font-size: 1.6rem !important;
+  -webkit-font-smoothing: antialiased; }
+
+.back-button-outer i {
+  font-size: 40px !important; }
 
 .p-r-10 {
   padding-right: 20px; }
@@ -171,14 +198,11 @@ SECTION FORMATION
 .formation--mecha-title {
   line-height: 1.3; }
 
-.formation--titre-taille {
-  font-size: 2.3rem !important; }
-
 .formation--image-curseur {
   cursor: all-scroll !important; }
 
 .services-content-outer .overflow p {
-  color: #777; }
+  color: #4e4e4e; }
 
 .services-content-outer .overflow a {
   color: #4562ae; }
@@ -209,7 +233,7 @@ SECTION CONSEILS
 .conseil--liste-decoration {
   list-style: none;
   line-height: 2.2;
-  color: #777; }
+  color: #4e4e4e; }
 
 .conseil--img-taille {
   width: 60% !important;
@@ -292,7 +316,7 @@ SECTION PORTFOLIO
 SECTION MISSION EXPLOSIVE
 */
 #mission-section li {
-  color: #777; }
+  color: #4e4e4e; }
 
 /*
 SECTION TEAM
@@ -314,7 +338,7 @@ SECTION TEAM
   margin-bottom: 10px; }
 
 #team-section .profile-content .position {
-  color: #777; }
+  color: #4e4e4e; }
 
 #team-section .profile-content span {
   width: 145px; }
@@ -329,7 +353,7 @@ SECTION CONTACT
   color: #f7ac54; }
 
 .input-outer .group.relative {
-  border-bottom: 1px dashed #777;
+  border-bottom: 1px dashed #4e4e4e;
   -webkit-transition: border-bottom 2s;
   transition: border-bottom 2s; }
 
