--- a/app/css/custom.scss
+++ b/app/css/custom.scss
@@ -119,7 +119,6 @@ NAVIGATION
 */
 .nav {
     display: flex;
-    justify-content: c;
     flex-wrap: wrap;
     justify-content: center;
     a {
@@ -189,7 +188,13 @@ SECTIONS
 /*
 SECTION HOME
 */
-.home--img-padding{
+
+.home-section .list-view li {
+    margin-bottom: 15px;
+  }
+
+.home--img-padding {
+    margin-left: 20px;
     padding: 0 !important;
 }
 .home-nav--centre {
