Fix logo stycky

--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -104,7 +104,8 @@ NAVIGATION
   background-color: #4562ae; }
 
 .nav--lien-padding {
-  padding: 1px; }
+  margin-left: 20px;
+  padding: 0; }
 
 .nav--img-taille {
   height: 54px; }
