Activated audits bloc

--- a/css/custom.css
+++ b/css/custom.css
@@ -277,9 +277,9 @@ SECTION CONSEILS
   cursor: all-scroll !important;
   width: auto; }
 
-.conseil__carousel-img {
+/* .conseil__carousel-img {
   opacity: 0;
-}
+} */
 
 .owl-carousel .owl-wrapper-outer.autoHeight {
   -webkit-transition: height 700ms ease-in-out;
